cmake_minimum_required(VERSION 3.21)
project(learncpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(
        learncpp
#        Chapter_00_Introduction_Getting_Started/HelloWorld.cpp
#        Chapter_00_Introduction_Getting_Started/HelloWorld.h
#        Chapter_01_Cpp_Basics/1_11_multiply_by_2.cpp
#        Chapter_01_Cpp_Basics/1_5_intro_to_iostream_01.cpp
#        Chapter_01_Cpp_Basics/1_5_intro_to_iostream_02.cpp
#        Chapter_01_Cpp_Basics/1_6_uninitialized_variables_and_undefined_behavior.cpp
#        Chapter_01_Cpp_Basics/summationAndSubtraction.cpp
#        Chapter_02_Cpp_Basics_Functions_and_Files/multipleCodeFiles/input.cpp
#        Chapter_02_Cpp_Basics_Functions_and_Files/multipleCodeFiles/main.cpp
#        Chapter_02_Cpp_Basics_Functions_and_Files/readNumber/io.cpp
#        Chapter_02_Cpp_Basics_Functions_and_Files/readNumber/io.h
#        Chapter_02_Cpp_Basics_Functions_and_Files/readNumber/main.cpp
#        Chapter_02_Cpp_Basics_Functions_and_Files/2_2_function_return_values.cpp
#        Chapter_02_Cpp_Basics_Functions_and_Files/2_3_getValuesFromUser.cpp
        main.cpp
#        version_check.cpp
#        version_check.h
        )
